Upgrade Tests to use jUnit to version 5

--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,8 @@ build/
 
 ### Mac OS ###
 .DS_Store
+.idea/codeInsightSettings.xml
+.idea/encodings.xml
+.idea/misc.xml
+.idea/vcs.xml
+.idea/workspace.xml
